# chow-chow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: Doxyfile
doc/html/: amp_8hpp_source.html  annotated.html  classChowChow_1_1Amp-members.html  classChowChow_1_1Amp.html  classChowChow_1_1Frequency-members.html  classChowChow_1_1Frequency.html  classChowChow_1_1Operator-members.html  classChowChow_1_1Operator.html  classChowChow_1_1Operators-members.html  classChowChow_1_1Operators.html  classChowChow_1_1Phase-members.html  classChowChow_1_1Phase.html  classChowChow_1_1Sample-members.html  classChowChow_1_1Sample.html  classChowChow_1_1Setting-members.html  classChowChow_1_1Setting.html  classChowChow_1_1WAVFile-members.html  classChowChow_1_1WAVFile.html  classes.html  constants_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9a994420c8aa347f4b0f1d49026e121e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  frequency_8cpp_source.html  frequency_8hpp_source.html  functions.html  functions_func.html  graph_legend.html  index.html  operator_8cpp_source.html  operator_8hpp_source.html  operators_8cpp_source.html  operators_8hpp_source.html  phase_8hpp_source.html  sample_8cpp_source.html  sample_8hpp_source.html  setting_8cpp_source.html  setting_8hpp_source.html  sine_8cpp_source.html  (+3 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
doc/latex/: annotated.tex  classChowChow_1_1Amp.tex  classChowChow_1_1Frequency.tex  classChowChow_1_1Operator.tex  classChowChow_1_1Operators.tex  classChowChow_1_1Phase.tex  classChowChow_1_1Sample.tex  classChowChow_1_1Setting.tex  classChowChow_1_1WAVFile.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
examples/: CMakeLists.txt  feedback.cpp  gunstar.cpp  simple.cpp  sine.cpp  two_op.cpp
include/chow-chow/: amp.hpp  constants.hpp  frequency.hpp  operator.hpp  operators.hpp  phase.hpp  phase_acc.hpp  sample.hpp  setting.hpp  sine.hpp  sine_tab.hpp  wav_file.hpp
src/: CMakeLists.txt  frequency.cpp  operator.cpp  operators.cpp  phase_acc.cpp  sample.cpp  setting.cpp  sine.cpp  wav_file.cpp
tests/: CMakeLists.txt  amp.cpp  frequency.cpp  operator.cpp  operators.cpp  perf.cpp  phase.cpp  phase_acc.cpp  pure_sine.cpp  sample.cpp  sine.cpp  wav_file.cpp
